--- a/weekend_16_11/main_style.css
+++ b/weekend_16_11/main_style.css
@@ -1,3 +1,10 @@
+*
+{
+  font-family: 'DM Sans', sans-serif;
+font-family: 'VT323', monospace;
+
+}
+
 #game-board {
     display: grid;
     grid-template-columns: repeat(var(--board-size, 12), 50px);
@@ -21,7 +28,7 @@
     background-color: #333;
     color: #fff;
     height: 100vh;
-    width: 130px;
+    width: 140px;
     display: flex;
     flex-direction: column;
 }
@@ -70,4 +77,12 @@ body
     background-image: url(./cube_images/desktop-minecraft-wallpaper-20.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.refresh
+{
+    width: 40%;
+    margin-top: 30px;
+    left: 25%;
+    position: relative;
 }
